# Stable-Tree-Algorithm-for-Suicide-Risk-Identification-in-Youth-Experiencing-Homelessness-YEH-

./: .gitignore  .gitmodules  404.html  DataSet_Combined_SI_SNI_Baseline_FE copy.csv  Metrics_suicidea.txt  README.md  SexGenderRaceOriginalVariableCodes.docx  citation.cff  distances.csv  index.html  mkdocs.yml  progress.html  progress2.html  progress2.qmd  progress_report.html  proposal.html  proposal.quarto_ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yml  static.yml
data/: DataSet_OriginalRaceCoding.csv
docs/: distances.csv  final_bertsimas_tree_report.ipynb  index.html  index.qmd  progress.html  progress.qmd  progress2.html  progress2.qmd  progress2.quarto_ipynb  progress_report.qmd  proposal.html  proposal.qmd  refs.bib  stable_suicide_data.ipynb
final_bertsimas_tree_report/: index.html
notebooks/: comparison_metrics.ipynb  final_bertimas_tree.ipynb  final_bertsimas_tree_report.ipynb  stability_comparisions.ipynb  stable_suicide_data.ipynb  stable_tree_bertsimas.ipynb  todo.md  visualization.ipynb
outputs/: Metrics_suicidea.txt
reference/: RootoftheProblem_ACCEPTEDVERSION.docx  bertsimas-summary.md  ~$Fulginiti_HomelessSuicideProject_Presentation.pptx
scripts/: run_experiment.py
search/: search_index.json
stable_suicide_data/: index.html
suicide_project/: Metrics.txt  main.html  main.py  main.qmd  pyproject.toml  run8.py  run9.py  stability_comparisions.ipynb  stable_tree_bertsimas.html  stable_tree_bertsimas.ipynb  stable_tree_bertsimas.py
template/: custom.scss  references.bib
usage/: index.html
(+528 files in other folders)
