[project]
name = "suicide-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "gurobipy>=12.0.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.12",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "skimpy>=0.0.18",
]
