[project]
name = "suicide-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "alive-progress>=3.2.0",
    "gurobipy>=12.0.1",
    "imbalanced-learn>=0.13.0",
    "itables>=2.3.0",
    "joblib>=1.4.2",
    "jupyter-cache>=1.0.1",
    "jupyterlab-rise>=0.43.1",
    "matplotlib>=3.10.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.12",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "skimpy>=0.0.18",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
